--- a/02-DataAnalysis.html
+++ b/02-DataAnalysis.html
@@ -335,7 +335,7 @@ Browse to locate your data to read
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>To locate your data file by browsing through your file system, call the <code>Read()</code> function with an empty file reference, <code>("")</code>, literally nothing between the quotes.</p>
+<p>To locate your data file by browsing through your file system, call the <code>Read()</code> function with an empty file reference, <code>("")</code>, literally nothing between the quotes: <code>Read("")</code>.</p>
 </div>
 </div>
 <p>If you are running R/RStudio in the cloud, your “local” computer is your cloud account, not the computer from which you are accessing the cloud. That “computer” could be any device, such as a tablet or an iPhone that does not even run R. So first upload your data file to your cloud account, as shown in the previously link reference <a href="http://web.pdx.edu/~gerbing/R/RStudioCloud.pdf" target="_blank" rel="noopener">cloud directions</a>.</p>
