--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">Feb 23, 2023 06:29 am</p>
+      <p class="date">Feb 26, 2023 09:47 pm</p>
     </div>
   </div>
   
